<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor">



        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/verification"
                android:layout_marginTop="@dimen/loginViewsMargin"/>


            <EditText
                android:id="@+id/editTextCode"
                style="@style/modifiedEditText"
                android:hint="@string/verification_code"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHighlight="#0C0C0C"
                android:textColorHint="#090909" />


            <Button
                android:id="@+id/codeLoginButton"
                style="@style/loginButton"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>