<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor">

        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/register"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/user_name"
                    style="@style/modifiedEditText"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHighlight="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/user_mail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/user_password"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/loginButton"
                android:id="@+id/signUpButton"
                android:layout_gravity="center"
                android:text="@string/register" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>